--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,27 +12,42 @@
 
         <p><%= data[i] %></p>
     <% } %> -->
-
-   <div class="general">
-        <div class="cuadrados">
-            <a href="#"><p>Cursos</p></a>
-            <img src="/img/gat.png" width="300" height="150" alt="Gato">
+<div class="cuerpo">
+    <div class="general">
+        <div class="general-linea">
+            <div class="cuadrados">
+                <a href="#" class="Cuadrados">
+                    <p>Cursos</p>
+                    <img src="/img/gat.png" width="100%" height="15%" alt="Gato">
+                </a>
+            </div>
+            <div class="cuadrados">
+                <p>Bienvenidos</p>
+            </div>
+            <div class="cuadrados">
+                <a href="#">
+                    <p>Cuestionarios</p>
+                    <img src="/img/gat.png" width="100%" height="15%" alt="Gato">
+                </a>
+            </div>
         </div>
-        <div class="cuadrados">
-            <p>Bienvenidos</p>
+        <div class="general-linea">
+            <div class="cuadrados">
+                <a href="#">
+                    <p>Editor y compilador</p>
+                    <img src="/img/gat.png" width="100%" height="15%" alt="Gato">
+                </a>
+            </div>
+            <div class="cuadrados">
+                <p>"Inserte su eslogan aqui"</p>
+            </div>
+            <div class="cuadrados">
+                <a href="#">
+                    <p>Foro</p>
+                    <img src="/img/gat.png" width="100%" height="15%" alt="Gato">
+                </a>
+            </div>
         </div>
-        <div class="cuadrados">
-            <a href="#"><p>Cuestionarios</p></a>
-        </div>
-        <div class="cuadrados">
-            <a href="#"><p>Editor y compilador</p></a>
-        </div>
-        <div class="cuadrados">
-            <p>"Inserte su eslogan aqui"</p>
-        </div>
-        <div class="cuadrados">
-            <a href="#"><p>Foro</p></a>
-        </div>
-   </div>
-
+    </div>
+</div>
 <%- include("templates/footer") %>
