--- a/public/css/main.css
+++ b/public/css/main.css
@@ -242,7 +242,9 @@ a{
     .cuadrados{
         float: left;
         width: 100%;
-        margin: 15px;
+        margin-right: 15px;
+        margin-top:15px;
+        margin-bottom: 15px;
         background-color: gray;
         border-radius: 15px;
     }
