--- a/public/css/main.css
+++ b/public/css/main.css
@@ -248,6 +248,7 @@ a{
     }
     .cuerpo{
         text-align: center;
+        padding-right: 15px;
         justify-content: center;
         display:flex;
     }
