--- a/views/templates/navbar.ejs
+++ b/views/templates/navbar.ejs
@@ -15,7 +15,7 @@
                     <li><a href="#">Editor y compilador</a></li>
                     <li><a href="../cuestionarios">Cuestionarios</a></li>
                     <li><a href="#">Foro</a></li>
-                    <li><a href="#">Contactanos</a></li>
+                    <li><a href="../contactanos">Contactanos</a></li>
                 </ul>
             </nav>
         </div>
