agregar comentarios dentro del foro

--- a/views/templates/navbar.ejs
+++ b/views/templates/navbar.ejs
@@ -14,7 +14,7 @@
                     <li><a href="../" class="activado"><i class="fas fa-home"></i> Home</a></li>
                     <li><a href="#">Editor y compilador</a></li>
                     <li><a href="../cuestionarios">Cuestionarios</a></li>
-                    <li><a href="#">Foro</a></li>
+                    <li><a href="../foro">Foro</a></li>
                     <li><a href="../contactanos">Contactanos</a></li>
                 </ul>
             </nav>
