--- a/views/templates/footer.ejs
+++ b/views/templates/footer.ejs
@@ -6,7 +6,7 @@
             <li><a href="https://www.facebook.com/PhpforDevs-100302545832385/?ref=pages_you_manage" target="_blank"><i class="fab fa-facebook-square"></i></a> 
                 <a href="https://www.instagram.com/phpfordevs/?hl=es" target="_blank"><i class="fab fa-instagram"></i></a>
                 <a href="https://www.reddit.com/r/PhpForDevs/" target="_blank"><i class="fab fa-reddit-square"></i></a>
-                <a href="mailto:phpfordevs@gmail.com?" target="_blank"><i class="fas fa-envelope"></i></a></li>
+                <a href="mailto:phpfordevs@gmail.com?"><i class="fas fa-envelope"></i></a></li>
                         
             <li><a href="../terminosycondiciones">Términos y condiciones</a></li>
             <li><a href="#">Acerca de nosotros</a></li>
