--- a/views/contactanos.ejs
+++ b/views/contactanos.ejs
@@ -4,31 +4,29 @@
         <h3>Escribenos tus sugerencias!</h3>
         <form name="formulario-contacto" method="post">
             <label for="nombre">Nombre</label>
-            <input class="nombre" id="nombre" type="text" required>
+            <input class="nombre" id="nombre" type="text" required><br/>
     
             <label for="email">Email</label>
-            <input class="email" id="email" type="email" required>
+            <input class="email" id="email" type="email" required><br/>
     
             <label for="subject">Asunto</label>
-            <input class="subject" id="subject" type="text" required>
+            <input class="subject" id="subject" type="text" required><br/>
     
             <label for="mensaje">Mensaje</label>
-            <textarea class="mensaje" id="mensaje" required></textarea>
-            <input id="enviarCorreo" type="submit" value="Enviar">
+            <textarea class="mensaje" id="mensaje" required></textarea><br/>
+            
+            <p><button id="enviarCorreo" type="submit">Enviar</button></p>
+            
         </form>
-        
     </div>
-    
      <div class="mapa">
-            <h3>Ubicación</h3>
-            <div class="mapa">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d484.4946174717578!2d-89.20025189591148!3d13.721056845119714!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f633084a2ed0673%3A0x483ee703e948be89!2sEscuela%20de%20Ingenier%C3%ADa%20de%20Sistemas%20Inform%C3%A1ticos%2C%20EISI!5e0!3m2!1ses!2ssv!4v1637992918983!5m2!1ses!2ssv" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            <h3>Ubicación</h3><br/>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d484.4946174717578!2d-89.20025189591148!3d13.721056845119714!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f633084a2ed0673%3A0x483ee703e948be89!2sEscuela%20de%20Ingenier%C3%ADa%20de%20Sistemas%20Inform%C3%A1ticos%2C%20EISI!5e0!3m2!1ses!2ssv!4v1637992918983!5m2!1ses!2ssv" allowfullscreen="" loading="lazy"></iframe>
         
-            </div>
-        </div>
-    
     </div>
+    
 </div>
+<script src="js/navbar.js"></script>
 <script>
     const btnEnvio=document.getElementById('enviarCorreo');
     btnEnvio.addEventListener('click',function(e){
