--- a/views/templates/head.ejs
+++ b/views/templates/head.ejs
@@ -12,11 +12,13 @@
   <meta name="author" content="Carolina Isabel Pineda Delgado" />
   <meta name="author" content="José Gustavo Pineda Delgado" />
   <meta name="author" content="William Enrique Vásquez Mancia" />
-  <meta name="keywords" content="phpfordevs, php, devs" />
+  <meta name="keywords" content="phpfordevs, php, devs, curso de php" />
   <meta name="description" content="phpfordevs" />
+
   <link rel="stylesheet" type="text/css" href="css/main.css" />
   <link rel="stylesheet" type="text/css" href="css/cuestionario.css" />
   <link rel="stylesheet" type="text/css" href="css/cuestionarios.css" />
+  <link rel="stylesheet" type="text/css" href="css/contac.css" />
   <title>Home</title>
   <script src="https://kit.fontawesome.com/f9e5d5f13a.js" crossorigin="anonymous"></script>
 </head>
