--- a/views/templates/navbar.ejs
+++ b/views/templates/navbar.ejs
@@ -12,6 +12,7 @@
             <nav class="nav">
                 <ul>
                     <li><a href="../" class="activado"><i class="fas fa-home"></i> Home</a></li>
+                    <li><a href="../cursos">Cursos</a></li>
                     <li><a href="#">Editor y compilador</a></li>
                     <li><a href="../cuestionarios">Cuestionarios</a></li>
                     <li><a href="../foro">Foro</a></li>
