--- a/views/templates/head.ejs
+++ b/views/templates/head.ejs
@@ -17,6 +17,7 @@
   <link rel="stylesheet" type="text/css" href="css/main.css" />
   <link rel="stylesheet" type="text/css" href="css/cuestionario.css" />
   <link rel="stylesheet" type="text/css" href="css/cuestionarios.css" />
+  <link rel="stylesheet" type="text/css" href="css/cursos.css" />
   <title>Home</title>
   <script src="https://kit.fontawesome.com/f9e5d5f13a.js" crossorigin="anonymous"></script>
 </head>
