--- a/views/cursos.ejs
+++ b/views/cursos.ejs
@@ -102,6 +102,188 @@
                             <p class="pContenido">Estructuras condicionales</p>
                             <p class="pContenido">Ciclos</p>
                             <p class="pContenido">Manejo de Errores</p>
+                            <p class="pContenido">Arreglos y cadenas en PHP</p>
+                        </td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <th></th>
+                        <th class="cantTiempo"><label id="cant">2:05</label></th>
+                        <td><img class="iconoReloj" src="img/calendar-clock.svg" alt="Imagen de reloj"></i></td>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
+    </a>
+    <a href="#">
+        <section class="cSection">
+            <table>
+                <tbody>
+                    <tr>
+                        <th rowspan="3" class="icono"><i class="fas fa-play-circle"></i></th>
+                        <th colspan="2" class="titulo"><p>Programación orientada a objetos</p></th>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <th></th>
+                        <td colspan="2" class="contenido">
+                            <p>Contenido:</p>
+                            <p class="pContenido">Creación de objetos</p>
+                            <p class="pContenido">Herencia</p>
+                        </td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <th></th>
+                        <th class="cantTiempo"><label id="cant">2:05</label></th>
+                        <td><img class="iconoReloj" src="img/calendar-clock.svg" alt="Imagen de reloj"></i></td>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
+    </a>
+    <a href="#">
+        <section class="cSection">
+            <table>
+                <tbody>
+                    <tr>
+                        <th rowspan="3" class="icono"><i class="fas fa-play-circle"></i></th>
+                        <th colspan="2" class="titulo"><p>Base de datos con PHP</p></th>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <th></th>
+                        <td colspan="2" class="contenido">
+                            <p>Contenido:</p>
+                            <p class="pContenido">Manejo de base de datos</p>
+                            <p class="pContenido">Acceso a base de datos</p>
+                            <p class="pContenido">Conexión de base de datos</p>
+                        </td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <th></th>
+                        <th class="cantTiempo"><label id="cant">2:05</label></th>
+                        <td><img class="iconoReloj" src="img/calendar-clock.svg" alt="Imagen de reloj"></i></td>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
+    </a>
+    <a href="#">
+        <section class="cSection">
+            <table>
+                <tbody>
+                    <tr>
+                        <th rowspan="3" class="icono"><i class="fas fa-play-circle"></i></th>
+                        <th colspan="2" class="titulo"><p>Creación de formularios en PHP</p></th>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <th></th>
+                        <td colspan="2" class="contenido">
+                            <p>Contenido:</p>
+                            <p class="pContenido">Expresiones regulares</p>
+                            <p class="pContenido">Get y Post</p>
+                        </td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <th></th>
+                        <th class="cantTiempo"><label id="cant">2:05</label></th>
+                        <td><img class="iconoReloj" src="img/calendar-clock.svg" alt="Imagen de reloj"></i></td>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
+    </a>
+    <a href="#">
+        <section class="cSection">
+            <table>
+                <tbody>
+                    <tr>
+                        <th rowspan="3" class="icono"><i class="fas fa-play-circle"></i></th>
+                        <th colspan="2" class="titulo"><p>Consumir API en PHP</p></th>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <th></th>
+                        <td colspan="2" class="contenido">
+                            <p>Contenido:</p>
+                            <p class="pContenido">Get</p>
+                            <p class="pContenido">Post</p>
+                        </td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <th></th>
+                        <th class="cantTiempo"><label id="cant">2:05</label></th>
+                        <td><img class="iconoReloj" src="img/calendar-clock.svg" alt="Imagen de reloj"></i></td>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
+    </a>
+    <a href="#">
+        <section class="cSection">
+            <table>
+                <tbody>
+                    <tr>
+                        <th rowspan="3" class="icono"><i class="fas fa-play-circle"></i></th>
+                        <th colspan="2" class="titulo"><p>Sesiones y manejo de cookies</p></th>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <th></th>
+                        <td colspan="2" class="contenido">
+                        </td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <th></th>
+                        <th class="cantTiempo"><label id="cant">2:05</label></th>
+                        <td><img class="iconoReloj" src="img/calendar-clock.svg" alt="Imagen de reloj"></i></td>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
+    </a>
+    <a href="#">
+        <section class="cSection">
+            <table>
+                <tbody>
+                    <tr>
+                        <th rowspan="3" class="icono"><i class="fas fa-play-circle"></i></th>
+                        <th colspan="2" class="titulo"><p>CRUD en PHP</p></th>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <th></th>
+                        <td colspan="2" class="contenido">
+                        </td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <th></th>
+                        <th class="cantTiempo"><label id="cant">2:05</label></th>
+                        <td><img class="iconoReloj" src="img/calendar-clock.svg" alt="Imagen de reloj"></i></td>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
+    </a>
+    <a href="#">
+        <section class="cSection">
+            <table>
+                <tbody>
+                    <tr>
+                        <th rowspan="3" class="icono"><i class="fas fa-play-circle"></i></th>
+                        <th colspan="2" class="titulo"><p>WebSockets en PHP</p></th>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <th></th>
+                        <td colspan="2" class="contenido">
                         </td>
                         <td></td>
                     </tr>
