--- a/views/contactanos.ejs
+++ b/views/contactanos.ejs
@@ -2,7 +2,7 @@
 <div class="formulario">
     <div class="contacto">
         <h3>Escribenos tus sugerencias!</h3>
-        <form name="formulario-contacto" method="post">
+        <form name="formulario-contacto" method="post"><br/>
             <label for="nombre">Nombre</label>
             <input class="nombre" id="nombre" type="text" required><br/>
     
