--- a/views/contactanos.ejs
+++ b/views/contactanos.ejs
@@ -1,8 +1,8 @@
 <%- include("templates/head") %>
 <div class="formulario">
     <div class="contacto">
-        <h3>Escribenos tus sugerencias!</h3>
-        <form name="formulario-contacto" method="post"><br/>
+        <h3>Escribenos tus sugerencias!</h3><br/>
+        <form name="formulario-contacto" method="post">
             <label for="nombre">Nombre</label>
             <input class="nombre" id="nombre" type="text" required><br/>
     
