--- a/views/cuestionarios.ejs
+++ b/views/cuestionarios.ejs
@@ -5,7 +5,7 @@
 <script src="js/cuestionarios.js"></script>
 <div class="contenedor">
     <a href="cuestionarioBasico">
-        <section class="cSection">
+        <section class="cSectionC">
             <table>
                 <tbody>
                     <tr>
@@ -36,7 +36,7 @@
         </section>
     </a>
     <a href="cuestionarioIntermedio">
-        <section class="cSection">
+        <section class="cSectionC">
             <table>
                 <tbody>
                     <tr>
@@ -67,7 +67,7 @@
         </section>
     </a>
     <a href="cuestionarioAvanzado">
-        <section class="cSection">
+        <section class="cSectionC">
             <table>
                 <tbody>
                     <tr>
