--- a/public/css/cuestionarios.css
+++ b/public/css/cuestionarios.css
@@ -5,7 +5,7 @@
     margin-right: 5%;
     height: 100%;
 }
-.contenedor a .cSection{
+.contenedor a .cSectionC{
     border-radius: 10px;
     margin-top: 20px;
     padding-top: 30px;
@@ -15,36 +15,36 @@
     background-color: #ececec;
     color:rgb(37, 37, 37);
 }
-.contenedor a .cSection table{
+.contenedor a .cSectionC table{
     width: 100%;
     height: 100%;
 }
-.contenedor a .cSection table t body tr{
+.contenedor a .cSectionC table t body tr{
     margin-top: 100px;
 }
-.contenedor a .cSection table tbody tr th{
+.contenedor a .cSectionC table tbody tr th{
     width: auto;
     text-align: left;
 }
-.contenedor a .cSection table tbody tr .contenido{
+.contenedor a .cSectionC table tbody tr .contenido{
     width: auto;
     text-align:left;
 }
-.contenedor a .cSection table tbody tr .cantPreguntas{
+.contenedor a .cSectionC table tbody tr .cantPreguntas{
     width: auto;
     text-align:right;
     color:darkgoldenrod;
 }
-.contenedor a .cSection table tbody tr .icono{
+.contenedor a .cSectionC table tbody tr .icono{
     font-size: 500%;
     color:rgb(0, 46, 92);
     text-align:right;
     padding-right: 3%;
 }
-.contenedor a .cSection table tbody tr .estrellas{
+.contenedor a .cSectionC table tbody tr .estrellas{
     color:darkgoldenrod;
 }
-.contenedor a .cSection table tbody tr .titulo{
+.contenedor a .cSectionC table tbody tr .titulo{
     color:#242434;
     font-size: 100%;
 }
