--- a/views/cuestionarios.ejs
+++ b/views/cuestionarios.ejs
@@ -3,33 +3,29 @@
 <script type="text/javascript" src="js/preguntasIntermedio.js"></script>
 <script type="text/javascript" src="js/preguntasAvanzado.js"></script>
 <script src="js/cuestionarios.js"></script>
-<div class="contenedor">
+<div class="contenedorG">
     <a href="cuestionarioBasico">
         <section class="cSectionC">
             <table>
                 <tbody>
                     <tr>
-                        <td rowspan="3" class="icono"><i class="fas fa-play-circle"></i></th>
-                        <th colspan="2" class="titulo"><p>Cuestionario 1</p></th>
-                        <td></td>
+                        <th rowspan="3" class="iconoC"><i class="fas fa-play-circle"></i></th>
+                        <td colspan="2" class="tituloC">Cuestionario 1</td>
                     </tr>
                     <tr>
-                        <th></th>
-                        <td colspan="2" class="contenido"><p>Contenido: PHP Básico</p></td>
-                        <td></td>
+                        <td colspan="2" class="contenidoC">Contenido: PHP Básico</td>
                     </tr>
                     <tr>
-                        <th></th>
-                        <th class="estrellas">
+                        <td class="estrellasC">
                             <i class="fas fa-star"></i>
                             <i class="far fa-star"></i>
                             <i class="far fa-star"></i>
                             <i class="far fa-star"></i>
                             <i class="far fa-star"></i>
-                        </th>
-                        <th class="cantPreguntas">
+                        </td>
+                        <td class="cantPreguntas">
                             <label id="cantBasico"></label>
-                        </th>
+                        </td>
                     </tr>
                 </tbody>
             </table>
@@ -40,27 +36,23 @@
             <table>
                 <tbody>
                     <tr>
-                        <td rowspan="3" class="icono"><i class="fas fa-play-circle"></i></th>
-                        <th colspan="2" class="titulo"><p>Cuestionario 2</p></th>
-                        <td></td>
+                        <th rowspan="3" class="iconoC"><i class="fas fa-play-circle"></i></th>
+                        <td colspan="2" class="tituloC">Cuestionario 2</td>
                     </tr>
                     <tr>
-                        <th></th>
-                        <td colspan="2" class="contenido"><p>Contenido: PHP Intermedio</p></td>
-                        <td></td>
+                        <td colspan="2" class="contenidoC">Contenido: PHP Intermedio</td>
                     </tr>
                     <tr>
-                        <th></th>
-                        <th class="estrellas">
+                        <td class="estrellasC">
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                             <i class="far fa-star"></i>
                             <i class="far fa-star"></i>
-                        </th>
-                        <th class="cantPreguntas">
+                        </td>
+                        <td class="cantPreguntas">
                             <label id="cantIntermedio"></label>
-                        </th>
+                        </td>
                     </tr>
                 </tbody>
             </table>
@@ -71,27 +63,23 @@
             <table>
                 <tbody>
                     <tr>
-                        <td rowspan="3" class="icono"><i class="fas fa-play-circle"></i></th>
-                        <th colspan="2" class="titulo"><p>Cuestionario 3</p></th>
-                        <td></td>
+                        <th rowspan="3" class="iconoC"><i class="fas fa-play-circle"></i></th>
+                        <td colspan="2" class="tituloC">Cuestionario 3</td>
                     </tr>
                     <tr>
-                        <th></th>
-                        <td colspan="2" class="contenido"><p>Contenido: PHP Avanzado</p></td>
-                        <td></td>
+                        <td colspan="2" class="contenidoC">Contenido: PHP Avanzado</td>
                     </tr>
                     <tr>
-                        <th></th>
-                        <th class="estrellas">
+                        <td class="estrellasC">
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
-                        </th>
-                        <th class="cantPreguntas">
+                        </td>
+                        <td class="cantPreguntas">
                             <label id="cantAvanzado"></label>
-                        </th>
+                        </td>
                     </tr>
                 </tbody>
             </table>
