--- a/public/css/cursos.css
+++ b/public/css/cursos.css
@@ -24,16 +24,13 @@
 }
 .contenedor a .cSection table tbody tr th{
     width: auto;
-    text-align: left;
-    padding-left: 15px;
 }
 .contenedor a .cSection table tbody tr .contenido{
-    width: 400px;
+    width: 100%;
     text-align:left;
-    padding-left: 15px;
 }
 .contenedor a .cSection table tbody tr .contenido .pContenido{
-    padding-left: 15px;
+    padding-left: 5px;
 }
 .contenedor a .cSection table tbody tr .cantTiempo{
     width: 100%;
