--- a/public/css/cuestionarios.css
+++ b/public/css/cuestionarios.css
@@ -26,6 +26,7 @@
     width: auto;
     text-align:right;
     color:darkgoldenrod;
+    padding-right: 4%;
 }
 .contenedorG a .cSectionC table tbody tr .iconoC{
     font-size: 500%;
