--- a/views/videos.ejs
+++ b/views/videos.ejs
@@ -1,2 +1,10 @@
 <%- include("templates/head") %>
-    <%- include("templates/footer") %>
+
+    <% console.log(data) %>
+        <% for(let i=0; i<data.length;i++){%>
+            <p>
+                <a href="<%= data[i].url %>">Video</a>
+            </p>
+            <% } %>
+
+                <%- include("templates/footer") %>
